fix: remove useless intents
