# apps/api/internal/api/handlers/admissions.go
@@ -101,9 +101,23 @@ func (h *AdmissionHandler) HandleCalculateAdmissionsRequest(w http.ResponseWrite
 
 type EventCheckInRequest struct {
 	UserID uuid.UUID `json:"user_id"`
-	RFID   string    `json:"rfid"`
+	RFID   *string   `json:"rfid"`
 }
 
+// Checks a user into an event. Staff only role.
+//
+//	@Summary		Check a user into an event
+//	@Description	Staff route for checking a user to an event. The user to check in must be an attendee and have never been checked in yet.
+//	@Tags			Admissions
+//	@Param			sh_session_id	cookie	string				true	"The authenticated session token/id"
+//	@Param			event_id		path	int					true	"The ID of the event"
+//	@Param			request			body	EventCheckInRequest	true	"Event check in data"
+//	@Success		204				"No Content"
+//	@Failure		400				{object}	response.ErrorResponse	"Malformed request body."
+//	@Failure		401				{object}	response.ErrorResponse	"Unauthenticated: Requester is not currently authenticated."
+//	@Failure		500				{object}	response.ErrorResponse	"Something went seriously wrong."
+//
+//	@Router			/events/{eventId}/checkin [post]
 func (h *AdmissionHandler) HandleEventCheckIn(w http.ResponseWriter, r *http.Request) {
 	eventId, err := web.PathParamToUUID(r, "eventId")
 	if err != nil {
@@ -117,4 +131,15 @@ func (h *AdmissionHandler) HandleEventCheckIn(w http.ResponseWriter, r *http.Req
 		return
 	}
 
+	if *req.RFID == "" {
+		req.RFID = nil
+	}
+
+	err = h.batService.CheckInAttendee(r.Context(), eventId, req.UserID, req.RFID)
+	if err != nil {
+		res.Send(w, http.StatusInternalServerError, res.NewError("internal_err", "Something went terribly wrong."))
+		return
+	}
+
+	w.WriteHeader(http.StatusNoContent)
 }
